--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
   <title>dandik.ru</title>
   <meta name="viewport" content="width=1024">
   <link rel="stylesheet" href="style.css">
-  <!-- Иконки соцсетей (FontAwesome CDN) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
   <canvas class="stars" id="stars"></canvas>
   <div class="center-box">
-    <!-- Загрузите свою аватарку в папку images с именем avatar.png -->
     <img src="images/avatar.png" alt="avatar" class="avatar">
     <div class="nickname">dandik</div>
     <div class="roles">сигма девелопер</div>
@@ -22,20 +20,20 @@
       <span class="playing">#КобяковВернисьНаПХ</span>
     </div>
     <div class="socials">
-      <a href="https://youtube.com/" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
-      <a href="https://t.me/" target="_blank" title="Telegram"><i class="fab fa-telegram"></i></a>
-      <a href="https://discord.com/" target="_blank" title="Discord"><i class="fab fa-discord"></i></a>
+      <a href="https://youtube.com/@dandikpvp" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
+      <a href="https://t.me/dandikru" target="_blank" title="Telegram"><i class="fab fa-telegram"></i></a>
+      <a href="https://discord.com/k89RYj9jhK" target="_blank" title="Discord"><i class="fab fa-discord"></i></a>
     </div>
     <div class="views"><i class="fa fa-eye"></i> 1488</div>
   </div>
   <div class="my-projects-btns">
-    <a href="https://github.com/your-github-username" target="_blank" class="my-projects-btn">
+    <a href="https://github.com/dandiknew" target="_blank" class="my-projects-btn">
       <i class="fab fa-github"></i> My Projects
     </a>
-    <a href="https://www.donationalerts.com/r/your-nickname" target="_blank" class="my-projects-btn">
+    <a href="https://www.donationalerts.com/r/dandikgamers" target="_blank" class="my-projects-btn">
       <i class="fa fa-heart"></i> Donate
     </a>
-    <a href="https://t.me/your-telegram" target="_blank" class="my-projects-btn">
+    <a href="https://t.me/nirex1337" target="_blank" class="my-projects-btn">
       <i class="fab fa-telegram"></i> Questions?
     </a>
   </div>
